@startuml

title __BASE's Class Diagram__\n

  namespace com.example.androidximalayafm {
    namespace base {
      class com.example.androidximalayafm.base.BaseApplication {
          {static} - sContext : Context
          {static} - sHandler : Handler
          {static} + getAppContext()
          {static} + getHandlerOptional()
          + onCreate()
      }
    }
  }
  

  namespace com.example.androidximalayafm {
    namespace base {
      abstract class com.example.androidximalayafm.base.BaseFragment {
          - mRootView : View
          + onCreateView()
          {abstract} # onSubViewLoaded()
      }
    }
  }
  

  namespace com.example.androidximalayafm {
    namespace base {
      interface com.example.androidximalayafm.base.IBasePresenter {
          {abstract} + registerViewCallback()
          {abstract} + unRegisterViewCallback()
      }
    }
  }
  

  com.example.androidximalayafm.base.BaseApplication -up-|> android.app.Application
  com.example.androidximalayafm.base.BaseFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
